--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 	api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
 	api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
 	api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+	api "com.github.RedSponge:RedEngine:master-SNAPSHOT"
 }
 
 jar {
